--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.data.mongodb.host=127.0.0.1
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=notifications
 spring.data.mongodb.repositories.enabled=true
+
+KafkaHost=127.0.0.1:9092
