--- a/booking-service/src/main/resources/application.properties
+++ b/booking-service/src/main/resources/application.properties
@@ -31,4 +31,4 @@ info.app.version=1.0.0
 #logging.file = /var/tmp/mylog.log
 logging.level.root=INFO
 
-KafkaHost=127.0.0.1:9092
+KafkaHost=localhost:9092
