--- a/theatre-service/Dockerfile
+++ b/theatre-service/Dockerfile
@@ -1,1 +1,5 @@
-
+FROM openjdk:8
+MAINTAINER rick1113 <chinmoy1113@gmail.com>
+ADD target/theatre-service-0.0.1-SNAPSHOT.jar theatre-service.jar
+ENTRYPOINT ["java", "-jar", "/theatre-service.jar"]
+EXPOSE 8405
