--- a/authenticate-service/src/main/resources/application.properties
+++ b/authenticate-service/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.application.name=authentication-gateway
 #server.servlet.context-path=/api/v1
 server.port=8400
 
-spring.datasource.url=jdbc:mysql://localhost:3306/microtest
+#spring.datasource.url=jdbc:mysql://localhost:3306/microtest
+spring.datasource.url=jdbc:mysql://mysql_authenticate_service:3306/microtest
 spring.datasource.username=root
 spring.datasource.password=1223
 spring.datasource.testWhileIdle=true
